Update VOCUS 2022-04-27 patch

--- a/_posts/2018-08-02-VOCUS-當政府怕了財團地主司法覆核.html
+++ b/_posts/2018-08-02-VOCUS-當政府怕了財團地主司法覆核.html
@@ -19,8 +19,4 @@ author: REDBRIC
 <p>若政府真的恐懼地主司法覆核，大可又向人大要求在法院判決前釋法，先下手為強，永絕地主的要脅，兼可短時間內完成覆核！所以所謂的避免司法覆核浪費時間，只是一種謊言！或者雙重標準！</p>
 <p>如果政府認為不應再次釋法，而且認為收地賠償不給予期望值對地主不合理，因為沒有足夠經濟誘因鼓勵地主自願交出土地，那麼依法處理的方法理應為修改法例，取消第12(c)條，便可理順收地賠償，而不可厚此薄彼，向弱勢市民收地就高舉第12(c)條的法定權力，冷酷無情，但向財團地主收地就恐懼司法覆核，有法不敢執，反而給予利益，利誘合作！這到底是欺善怕惡？抑或是利益輸送？</p>
 <p>事實上，多年前我已在一份研究報告中指出香港需要修訂第12(c)條，以理順收地賠償原則，可惜政府愛理不理，反喜以各式各樣行政措施，繞過第12(c)條的規定，向財團地主提供優厚發展條件，新界東北新發展區的「原址換地」方案正是一例，政府出爾反爾，製造不公！</p>
-<figure><img src="https://images.vocus.cc/b26a8490-be79-4027-83ec-a696a52b6eed.png" referrerpolicy="no-referrer"></figure>
-<p><br></p>
-<p><br></p>
-<p><br></p>
-<p><br></p>
+<img src="https://images.vocus.cc/b26a8490-be79-4027-83ec-a696a52b6eed.png">
