--- a/_posts/2019-05-29-VOCUS-沙中線造假事件的跟進辦法.html
+++ b/_posts/2019-05-29-VOCUS-沙中線造假事件的跟進辦法.html
@@ -10,7 +10,7 @@ author: REDBRIC
 
 <p>今天政府終於召開記招解釋沙中線工程造假事件的最新進展，運房局局長稱『港鐵上月提交的紅磡站連續牆圖則報告，與屋宇署同意的圖則不相符，嚴重偏差，明顯前後矛盾，而多番追問港鐵亦未能作合理解釋，當局認為事態嚴重，必須及早向公眾公布。他又說，已將相關資料轉交警方及獨立調查委員會跟進。 』</p>
 <p>所指的與圖紙不符是對比港鐵7月13日提交的圖則與6月15日報告所提及的螺絲頭數量少約2000個，原因涉及未經屋宇署批准修改圖則如圖1所示：</p>
-<p><img src="https://images.vocus.cc/d85710e9-c343-434b-bcfd-f7972c35748f.png" referrerpolicy="no-referrer">1 前後圖紙不一樣</p>
+<p><img src="https://images.vocus.cc/d85710e9-c343-434b-bcfd-f7972c35748f.png">1 前後圖紙不一樣</p>
 <p> 然而，政府在處理這宗造假案的手法非常奇怪，有違常理和法律。首先，如果需要有人為造假事件問政治責落台，首推運房局局長本人，因為運房局局長是政治問責官員負責鐵路事宜，責無旁貸。但他不但未有問責辭職，今日反而高調宣佈政府要求 港鐵立即解除相關管理人員職務！</p>
 <p>須知港鐵的相關管理人員並非公務員，更非局長下屬，而政府與港鐵就沙中線工程只不過是合約關係，即所謂的委託協議，負責代表政府管理工程。政府理應根據合約條款處理，怎會下令解除相關管理人員職務？是否越俎代庖(越權 ultra vires)，或是向港鐵脅迫施壓 (duress)？</p>
 <p>事實上，就委託協議中項目監控及檢驗方面，第17.1(A)條文列明，倘工程涉及重大影響，必須向政府通報。而今日記招中政府官員承認有人擅自更改圖則，事態嚴重，既然港鐵沒有根據協議就嚴重事故向政府通報，政府今日的處理辦法應該分為兩方面，民事方面可根據合約條款向港鐵追究，刑事方面可向相關執法部門舉報，但前者完全沒有提及，後者只稱向警方提交資料。</p>
