--- a/_posts/2022-04-26-VOCUS-公務員日常不日常-day88-柳丁阿伯太熱心.html
+++ b/_posts/2022-04-26-VOCUS-公務員日常不日常-day88-柳丁阿伯太熱心.html
@@ -8,8 +8,7 @@ tags: blog
 author: 新葉
 ---
 
-<div class="draft-block draft--p left"></div>
-<div class="draft--imgNormal draft-block"><div><div style="height:3312px" class="image-block-prerender" data-src="https://images.unsplash.com/photo-1451885140977-ed62a6b8744e?crop=entropy&cs=srgb&fm=jpg&ixid=MnwyNTY4N3wwfDF8c2VhcmNofDEwfHxvcmFuZ2UlMjB0cmVlfGVufDB8fHx8MTY0NzE3MDM0Nw&ixlib=rb-1.2.1&q=85" data-width="3312" data-height="2208" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.unsplash.com/photo-1451885140977-ed62a6b8744e"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div>
 <div class="draft-block draft--p left">災害告一段落後，農地勘查成為例行性業務。</div>
 <div class="draft-block draft--p left">記得準備重新分配業務時，我一度猶豫是否要將農地業務給新人，繼續辦理原本的農情災害及推廣。</div>
 <div class="draft-block draft--p left">農地業務，也就是農用證明、設施容許等等，受理民眾的申請案，勘查農地、核發證明。是我不熟悉的領域。</div>
