--- a/_posts/2022-04-26-VOCUS-公務員日常不日常-day89-活動旁觀好吃驚.html
+++ b/_posts/2022-04-26-VOCUS-公務員日常不日常-day89-活動旁觀好吃驚.html
@@ -8,8 +8,7 @@ tags: blog
 author: 新葉
 ---
 
-<div class="draft-block draft--p left"></div>
-<div class="draft--imgNormal draft-block"><div><div style="height:3461px" class="image-block-prerender" data-src="https://images.unsplash.com/photo-1585938389612-a552a28d6914?crop=entropy&cs=srgb&fm=jpg&ixid=MnwyNTY4N3wwfDF8c2VhcmNofDQzfHxwaWNuaWN8ZW58MHx8fHwxNjUwOTc4ODE3&ixlib=rb-1.2.1&q=85" data-width="3461" data-height="2336" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.unsplash.com/photo-1585938389612-a552a28d6914"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div>
 <div class="draft-block draft--p left">去年碰到疫情，原先要辦理的活動取消（<a href="https://vocus.cc/article/60e01ac9fd89780001bfdcce" target="_blank" class="draft--a">Day71：起起伏伏活動主辦記事（下）</a>），讓我偷閒了很久。</div>
 <div class="draft-block draft--p left">今年度，長官決定重拾上次的舊業，相同地點、不同主題，總之要熱熱鬧鬧就對了。</div>
 <div class="draft-block draft--p left">幸運的是，這次我不是主辦。</div>
