--- a/_posts/2022-04-26-VOCUS-在音樂旅途中-聽一場青春的夢.html
+++ b/_posts/2022-04-26-VOCUS-在音樂旅途中-聽一場青春的夢.html
@@ -23,5 +23,4 @@ author: 直樹的流浪之歌
 <div class="draft-block draft--p left">約莫過了半年，男孩曾在一次歸途的火車上，偶遇了一名來台灣旅遊的日本女性。當男孩鼓起勇氣，嘗試用自己僅知的幾句日文與對方交流時，竟幸運得到一位日語流利的台灣婆婆，居中協助翻譯溝通，讓男孩在短短一小時的車程中，親身體驗了人生首次的異國文化交流。而那難能可貴的交流，更奠定了男孩，往後深入了解日本文化的基礎。</div>
 <div class="draft-block draft--p left">列車遠去，樂聲嘎然而止，徒留下汽笛聲的殘響。</div>
 <div class="draft-block draft--p left">那一刻的自己，多想就留在這回憶中的車廂，繼續凝望那一幕幕，默默影響著眾多生命的音樂與影像。不用再回到現實，只管耽溺在這場永恆的夢。</div>
-<div class="draft--imgNormal draft-block"><div><div style="height:4032px" class="image-block-prerender" data-src="https://images.vocus.cc/a06e6ef6-81e8-4bc4-b31b-4b4ce9827600.jpg" data-width="4032" data-height="3024" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block">圖攝自《唱我們的歌－流行音樂故事展》</figcaption></div></div>
-<div class="draft-block draft--p left"></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/a06e6ef6-81e8-4bc4-b31b-4b4ce9827600.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">圖攝自《唱我們的歌－流行音樂故事展》</figcaption></div>
