--- a/_posts/2022-04-26-VOCUS-政治-意願書.html
+++ b/_posts/2022-04-26-VOCUS-政治-意願書.html
@@ -8,34 +8,26 @@ tags: blog
 author: 蘇 遇
 ---
 
-<div class="draft-block draft--p left"></div>
-<div class="draft--imgNormal draft-block"><div><div style="height:undefinedpx" class="image-block-prerender" data-src="https://images.vocus.cc/f4b393b2-37d8-4cbe-8678-af5d2a6a5b09.webp" data-width="0" data-height="0" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block">圖 / 取自教育部網站 </figcaption></div></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/f4b393b2-37d8-4cbe-8678-af5d2a6a5b09.webp"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">圖 / 取自教育部網站 </figcaption></div>
 <h2 class="draft-block draft--h2" name="header-ec31a">到了家長抉擇的時刻了</h2>
 <div class="hr__AtomHrContainer-sc-1afmttx-0 dsBIOm draft-block"><pre class="hr__HrWrapper-sc-1afmttx-1 hUbgX draft--hr"><hr class="hr__Hr-sc-1afmttx-2 dOXRXF"></pre></div>
-<div class="draft-block draft--p left"></div>
 <blockquote class="draft-block draft--blockquote"><span style="font-weight: bold; ">兒童</span></blockquote>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">目前政策面上宣導的就是快去打疫苗，這樣覆蓋率便可以讓共存更快達到，但最危險的當然是沒有打疫苗的族群，那就是小孩。</span></div>
 <div class="draft-block draft--p left"><span style="text-decoration: underline; ">先前政府通過了小孩施打默德納這件事情引發反彈，原因是因為多數成人施打默德納後反應都非常強烈，擔心對小孩來說會是更大的副作用且不適感會更加明顯且難以適應，接種半劑莫德納、2劑間隔28天，尚不知到半劑是否是可以的劑量，自然是等到大規模施打之後再做調整吧。</span></div>
 <div class="hr__AtomHrContainer-sc-1afmttx-0 dsBIOm draft-block"><pre class="hr__HrWrapper-sc-1afmttx-1 hUbgX draft--hr"><hr class="hr__Hr-sc-1afmttx-2 dOXRXF"></pre></div>
-<div class="draft-block draft--p left"></div>
-<div class="draft--imgNormal draft-block"><div><div style="height:undefinedpx" class="image-block-prerender" data-src="https://images.vocus.cc/2c86b05b-c91a-4f6a-8a1a-ea3e5023dc5d.webp" data-width="0" data-height="0" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block">圖 / 取自教育部網站</figcaption></div></div>
-<div class="draft-block draft--p left"></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/2c86b05b-c91a-4f6a-8a1a-ea3e5023dc5d.webp"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">圖 / 取自教育部網站</figcaption></div>
 <div class="draft-block draft--p left">針對兒童接種mRNA疫苗後發生心肌炎與心包膜炎之安全性監測，同意書說明，美國5-11歲兒童接種 Pfizer/BNT 疫苗之通報率第1劑後約每百萬劑 0 （男，女性未提供統計值），第2劑後約每百萬劑 2.0 （女） 與 4.3 （男），教育部提醒學校須給家長至少有7天充分思考時間，評估是否要讓子女接種。</div>
 <div class="draft-block draft--p left">終究球還是給了家長這邊接球，但在滾動式的政策下最後還是得要接種，因為隨著越來越多地方需要打滿幾劑才能進入，雖然這樣非常限制人民的自由，但為了防疫、為了保護自己也保護別人的健康才不得不這樣做，先前也是實聯制掌握人民行蹤，其實已經不用說太多甚麼憲法保障人民自由，隨時隨地都活在監控之中，不過非常時期也只能這樣遵守。</div>
 <div class="hr__AtomHrContainer-sc-1afmttx-0 dsBIOm draft-block"><pre class="hr__HrWrapper-sc-1afmttx-1 hUbgX draft--hr"><hr class="hr__Hr-sc-1afmttx-2 dOXRXF"></pre></div>
-<div class="draft-block draft--p left"></div>
 <blockquote class="draft-block draft--blockquote"><span style="font-weight: bold; ">Omicron病毒</span></blockquote>
 <div class="draft-block draft--p left">表現幾乎都集中在上呼吸道，如頭痛、發燒、流鼻水、咳嗽、喉嚨癢等，相較於成人，兒童會更常出現噁心、嘔吐、腹瀉等情況，甚至是哮吼、熱痙攣和抽搐。</div>
 <div class="draft-block draft--p left">已有多國研究指出，兒童確診COVID-19有機會併發腦炎、心肌炎、肺炎，儘管99%以上都是無症狀或輕症，少數兒童還是有存在重症和死亡的風險，也因為傳染力強，對於要保護小孩防不勝防，打疫苗才是最安全的方法。</div>
 <div class="hr__AtomHrContainer-sc-1afmttx-0 dsBIOm draft-block"><pre class="hr__HrWrapper-sc-1afmttx-1 hUbgX draft--hr"><hr class="hr__Hr-sc-1afmttx-2 dOXRXF"></pre></div>
-<div class="draft-block draft--p left"></div>
 <blockquote class="draft-block draft--blockquote"><span style="font-weight: bold; ">疫苗</span></blockquote>
 <div class="draft-block draft--p left"><span style="text-decoration: underline; ">由於副作用較少的次單位蛋白疫苗Novavax還有台灣的高端尚未走到兒童對象的研發階段，目前僅有的是輝瑞BNT兒童疫苗和莫德納疫苗兩款可供選擇，輝瑞適用對象為5～11歲兒童，莫德納則是6～11歲，兩者皆屬於mRNA疫苗。</span></div>
 <div class="draft-block draft--p left"><span style="text-decoration: underline; ">mRNA疫苗常見副作用包括注射部位腫痛、頭痛、全身肌肉痠痛、噁心還有倦怠，除了這些輕微的不良反應外，最令人擔憂的還是心肌炎或心包膜炎等併發症狀。</span></div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">美國目前僅通過輝瑞兒童疫苗的EUA並開放施打，在867萬劑5～11歲兒童人口接種中，有4,249件不良反應事件通報，其中100件屬於嚴重的不良反應，12例是心肌炎，嚴重不良發生率略高於十萬分之一，雖然有機率但僅是微乎其微的案例。</span></div>
 <div class="draft-block draft--quotesSpecial center"><div class="content"><span style="font-weight: bold; ">至於莫德納，雖已取得歐盟等國的EUA，但還缺乏大規模接種數據，目前僅能從第二、三期臨床實驗數據判斷而已。</span></div></div>
 <div class="hr__AtomHrContainer-sc-1afmttx-0 dsBIOm draft-block"><pre class="hr__HrWrapper-sc-1afmttx-1 hUbgX draft--hr"><hr class="hr__Hr-sc-1afmttx-2 dOXRXF"></pre></div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">終究還是得把疫苗打下去，但評估還是得謹慎小心，想好了才不會後悔莫及。</span></div>
 <div class="hr__AtomHrContainer-sc-1afmttx-0 dsBIOm draft-block"><pre class="hr__HrWrapper-sc-1afmttx-1 hUbgX draft--hr"><hr class="hr__Hr-sc-1afmttx-2 dOXRXF"></pre></div>
-<div class="draft-block draft--p left"></div>
