--- a/_posts/2022-04-26-VOCUS-車諾比-序章.html
+++ b/_posts/2022-04-26-VOCUS-車諾比-序章.html
@@ -10,8 +10,8 @@ author: 私の部屋：世界、歷史、人生的万華鏡
 
 <h3 class="draft-block draft--h3" name="header-cl2dl">「事實上，從西元1986年（那一天）開始，我們每個人的身體中都存有一塊『車諾比』（Chernobyl）。」</h3>
 <div class="draft-block draft--p left">，加來道雄（MichioKaku），理論物理學家</div>
-<div class="draft--imgNormal draft-block"><div><div style="height:1160px" class="image-block-prerender" data-src="https://images.vocus.cc/1f341cfe-2b03-4efe-b51a-bc7d1fb03e7a.jpg" data-width="1160" data-height="762" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/1f341cfe-2b03-4efe-b51a-bc7d1fb03e7a.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div>
 <div class="draft-block draft--p left">距今36年前，西元1986年的4月下旬，當時人們正試著忘掉美國「挑戰者號太空梭」（STS Challenger）升空失敗，太空人不幸英勇捐軀的哀慟跟悲傷。然而，俗諺卻似乎冷酷有無情地揭示著，<span style="font-weight: bold; ">「福無重受日，禍有並來時」</span>的道理…因為就在位處烏克蘭的普里皮亞季（Prypiat），一座隸屬昔日蘇聯自治加盟國能源供輸關鍵地位的「車諾比核能發電廠」（正式名稱為列寧核電廠、Vladimir Lenin Nuclear Power Plant），亦作為鐵幕世界「和平利用核能」（和平原子、мирныйатом）的最佳「形象大使」，居然，就在那一刻的時點上，當所有的一切都進入最不巧的時候，發生了總合所有之下，最不幸的後果...禍不單行、禍不單行，可人類卻只有「單行道」可走…</div>
-<div class="draft--imgNormal draft-block"><div><div style="height:2560px" class="image-block-prerender" data-src="https://images.vocus.cc/a1c3f447-0660-46a8-98ce-70a8414b796c.png" data-width="2560" data-height="1958" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/a1c3f447-0660-46a8-98ce-70a8414b796c.png"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div>
 <div class="draft-block draft--p left">動工於西元1972年，預計將以六座核能反應爐來改善蘇聯西南部烏克蘭、白俄羅斯電力負載緊縮的車諾比核電廠，最早規劃的電廠位置，其實是選定在距離烏克蘭首府基輔（Kyiv）僅「25公里」的地方。</div>
 <div class="draft-block draft--p left">嗯，25公里是甚麼概念？</div>
