--- a/_posts/2019-05-29-VOCUS-沙中線紅磡站鋼筋與耦合器唔啱牙.html
+++ b/_posts/2019-05-29-VOCUS-沙中線紅磡站鋼筋與耦合器唔啱牙.html
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: '<span style="font-style: normal; letter-spacing: -0.63px;">沙中線紅磡站鋼筋與耦合器唔啱牙</span>'
+title: 沙中線紅磡站鋼筋與耦合器唔啱牙
 date: 2019-05-29 10:15:33.000000000 +00:00
 link: https://vocus.cc/user/@ecyY/5b5aa5e7fd89780001c5b580
 categories: vocus
@@ -12,13 +12,12 @@ author: REDBRIC
 <p>但這個講法與其他資料有點不符，首先根據港鐵報告，BOSA負責供應及為連續牆和樓板的鋼筋耦合器鉸牙 (Diaphragm wall and slab re-bar coupler supply and threading)，並非分開兩家供應。(p.14, http://www.mtr-shatincentrallink.hk/pdf/multimedia-gallery/report/report_20180614_e.pdf )</p>
 <p>另外，報告指耦合器牌子和型號為 BOSA Type II-SEIPLICE Standard Ductility Couplers (p.28)，而非LENTON。</p>
 <p>而且根據港鐵提供的資料，鋼筋頭螺絲桿也是圓柱體的。(圖1)</p>
-<p><img src="https://images.vocus.cc/66391b31-2797-44fb-ad37-78d57fef934e.png" referrerpolicy="no-referrer">1 鋼筋螺絲頭 (港鐵資料) </p>
+<p><img src="https://images.vocus.cc/66391b31-2797-44fb-ad37-78d57fef934e.png">1 鋼筋螺絲頭 (港鐵資料) </p>
 <p>這與BOSA所顯示的鉸牙機功能一致。(圖2)</p>
-<p><img src="https://images.vocus.cc/fd43652b-d7b8-4339-8446-e4a061cec1a0.png" referrerpolicy="no-referrer">2 BOSA 廣告介紹鋼筋鉸牙器</p>
+<p><img src="https://images.vocus.cc/fd43652b-d7b8-4339-8446-e4a061cec1a0.png">2 BOSA 廣告介紹鋼筋鉸牙器</p>
 <p>但運房局局長接受傳媒訪問時並沒有否認報導，反而指出這問題「已屬較舊的事件」，變相承認該報導指螺絲帽與螺絲桿唔啱牙！</p>
 <p>而根據LENTON的產品介紹，有一型號 nVent LENTON A2 STANDARD COUPLER, PLAIN (https://www.erico.com/catalog/literature/RSB-WWEN.pdf)，耦合器螺絲帽是圓錐型的。(圖3)</p>
-<p><img src="https://images.vocus.cc/bcf2a263-e0f2-484f-b6ae-94d8c1536d05.png" referrerpolicy="no-referrer">3 https://www.erico.com/catalog/literature/RSB-WWEN.pdf</p>
-<p><img src="https://images.vocus.cc/ed11a305-2600-47ce-b33f-a6d822cb6b8c.png" referrerpolicy="no-referrer">4 https://www.erico.com/category.asp?category=R3242#catalog-video</p>
+<p><img src="https://images.vocus.cc/bcf2a263-e0f2-484f-b6ae-94d8c1536d05.png">3 https://www.erico.com/catalog/literature/RSB-WWEN.pdf</p>
+<p><img src="https://images.vocus.cc/ed11a305-2600-47ce-b33f-a6d822cb6b8c.png">4 https://www.erico.com/category.asp?category=R3242#catalog-video</p>
 <p>LENTON 網頁有一條短片介紹特製的機械，專門鉸出圓錐型的螺絲牙，配合圓錐型螺絲帽，https://www.erico.com/category.asp?category=R3242#catalog-video。(圖4) 事實上，如果螺絲帽是圓錐型，而螺絲桿是圓柱體，會出現只能扭入小部份螺絲桿的情況，這與報導的情況吻合。</p>
 <p>如果這是真相，即所有耦合器均無法扭緊，只能扭入少部份螺絲桿。由於後果嚴重，如果報導有錯，政府必須盡快澄清，及提供耦合器螺絲帽的照片，以正視聽！</p>
-<p><br></p>
