--- a/_posts/2022-04-27-PQ-巴基斯坦孔子學院遭炸彈攻擊-3名中國人喪生-影像.html
+++ b/_posts/2022-04-27-PQ-巴基斯坦孔子學院遭炸彈攻擊-3名中國人喪生-影像.html
@@ -24,11 +24,11 @@ author: 謝時
 
 
 
-<p class="pqnote">俾路支省的深水港瓜達爾港（Gwadar Port）為北京發展「中巴經濟走廊」（China Pakistan Economic-Corridor, CPEC）計畫的最南端，這是習近平欲發展一帶一路倡議來擴張貿易勢力的一個重要地點。然而<strong>中國投資興建的瓜達爾港未來 40 年港口營運 91% 的收入都歸中國</strong>，再加上該地區利潤豐厚的採礦和能源計畫並未讓當地人得到利益，但卻得承擔一帶一路計畫帶來影響，因此普遍認為巴基斯坦政府與中國簽訂的是「不平等條約」。中國駐巴基斯坦喀拉蚩的總領事館就曾於 2018 年因瓜達爾港問題而受到俾路支解放軍的暴力攻擊。</p>
+<p class="pqpoint">俾路支省當地居民不滿巴基斯坦政局一直由旁遮普人主導，而且俾路支省的深水港瓜達爾港（Gwadar Port）為北京發展「中巴經濟走廊」（China Pakistan Economic-Corridor, CPEC）計畫的最南端，這是習近平欲發展一帶一路倡議來擴張貿易勢力的一個重要地點。然而<strong>中國投資興建的瓜達爾港未來 40 年港口營運 91% 的收入都歸中國</strong>，再加上該省利潤豐厚的採礦和能源計畫並未讓當地人得到利益，但卻得承擔一帶一路計畫帶來衝擊，因此普遍認為巴基斯坦政府與中國簽訂的是<strong>「不平等條約」</strong>。中國駐巴基斯坦喀拉蚩的總領事館就曾於 2018 年因瓜達爾港問題而受到俾路支解放軍的暴力攻擊。</p>
 
 
 
-<div class="wp-block-image"><figure class="aligncenter size-large"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2020/12/09b31195-epgywvdxcaeoqok-1024x1024.jpg" alt="" class="wp-image-46913" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2020/12/09b31195-epgywvdxcaeoqok-1024x1024.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2020/12/09b31195-epgywvdxcaeoqok-300x300.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2020/12/09b31195-epgywvdxcaeoqok-150x150.jpg 150w, https://storage.googleapis.com/stateless-34-84-11-249/2020/12/09b31195-epgywvdxcaeoqok-768x768.jpg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2020/12/09b31195-epgywvdxcaeoqok.jpg 1280w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>中巴經濟走廊（CPEC）貿易協議包含：乾淨能源、基礎建設發展、巴基斯坦瓜達爾港（Gwadar Port）自由特區、鐵路更新計畫、特別經濟特區等。<br>圖／𝓜𝓮𝓮𝓼𝓱𝓪
+<div class="wp-block-image"><figure class="aligncenter size-large"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2020/12/09b31195-epgywvdxcaeoqok-1024x1024.jpg" alt="" class="wp-image-46913" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2020/12/09b31195-epgywvdxcaeoqok-1024x1024.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2020/12/09b31195-epgywvdxcaeoqok-300x300.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2020/12/09b31195-epgywvdxcaeoqok-150x150.jpg 150w, https://storage.googleapis.com/stateless-34-84-11-249/2020/12/09b31195-epgywvdxcaeoqok-768x768.jpg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2020/12/09b31195-epgywvdxcaeoqok.jpg 1280w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>中巴經濟走廊（CPEC）貿易協議包含：乾淨能源、基礎建設發展、巴基斯坦瓜達爾港（Gwadar Port）自由特區、鐵路更新計畫、特別經濟特區等。<br>圖／𝓜𝓮𝓮𝓼𝓱𝓪
 @Misha_PTI／Twitter</figcaption></figure></div>
 
 
