--- a/_posts/2022-04-26-PQ-中國索羅門確認簽署安全協議-澳防長暗指索國官員拿錢辦事.html
+++ b/_posts/2022-04-26-PQ-中國索羅門確認簽署安全協議-澳防長暗指索國官員拿錢辦事.html
@@ -32,7 +32,7 @@ author: 蔡侯塞
 
 
 
-<div class="wp-block-image"><figure class="aligncenter size-full"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2022/04/f2257770-1024x768_62368650282.jpg" alt="" class="wp-image-99280" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/04/f2257770-1024x768_62368650282.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2022/04/f2257770-1024x768_62368650282-300x225.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/04/f2257770-1024x768_62368650282-768x576.jpg 768w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>中國武警進駐香港鎮壓社會運動的場景，現在即可能在索羅門群島出現了。<br>圖／中央社</figcaption></figure></div>
+<div class="wp-block-image"><figure class="aligncenter size-full"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2022/04/f2257770-1024x768_62368650282.jpg" alt="" class="wp-image-99280" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/04/f2257770-1024x768_62368650282.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2022/04/f2257770-1024x768_62368650282-300x225.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/04/f2257770-1024x768_62368650282-768x576.jpg 768w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>中國武警進駐香港鎮壓社會運動的場景，現在極可能在索羅門群島出現了。<br>圖／中央社</figcaption></figure></div>
 
 
 
