--- a/_posts/2022-04-27-INMEDIA-mirror演唱會門票未開賣已炒至六萬-田北辰倡行實名制.html
+++ b/_posts/2022-04-27-INMEDIA-mirror演唱會門票未開賣已炒至六萬-田北辰倡行實名制.html
@@ -8,11 +8,11 @@ tags: blog
 author: 獨媒報導
 ---
 
-<img src="https://images.weserv.nl/?url=inmediahk.net/files/column_images/20220427TT.png" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="#e4692b">【獨媒報導】</font>男子組合MIRROR 今年7月底首度在紅館舉行10場演唱會，有指門票未開賣已被「黃牛」炒至六萬元。實政圓桌立法會議員田北辰建議政府盡快實行購票實名制，限制每人購票數量，否則現時「冇眼睇炒到幾錢張」。他又認為，現時使用「安心出行」及疫苗通行證形式上與實名制無異，「冇人會出聲」，政府應「順水推舟」盡快落實。</p>
+<img src="https://images.weserv.nl/?url=inmediahk.net/files/column_images/2222_1.png" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="#e4692b">【獨媒報導】</font>男子組合 MIRROR 今年7月底首度在紅館舉行10場演唱會，有指門票未開賣已被「黃牛」炒至六萬元。實政圓桌立法會議員田北辰建議政府盡快實行購票實名制，限制每人購票數量，否則現時「冇眼睇炒到幾錢張」。他又認為，現時使用「安心出行」及「疫苗通行證」形式上與實名制無異，「冇人會出聲」，政府應「順水推舟」盡快落實。</p>
 <p>民政事務局於2018年曾向立法會提交<a href="https://www.legco.gov.hk/yr18-19/chinese/panels/ha/papers/ha20181126cb2-292-5-c.pdf">文件</a>，指考慮修訂《公衆娛樂場所條例》，實施購票實名制，以涵蓋紅館和伊館在内的場地。</p>
-<p>Mirror將在今年7月25日至31日及8月2至4日舉行十場演唱會，票價分別為480元、880元及1,280元。田北辰指，政府先前已確定落實實名制，「民政事務局長講咗話要做，點知佢（徐英偉）就離任」，令實名制一拖再拖。他認為實名制十分重要﹐又強調實名制並不擾民，。他指市民進入演唱會場地亦需掃描二維碼，不會加長排隊輪候時間。</p>
+<p>MIRROR 將在今年7月25日至31日及8月2至4日舉行十場演唱會，票價分別為480元、880元及1,280元。田北辰指，政府先前已確定落實實名制，「民政事務局長講咗話要做，點知佢（徐英偉）就離任」，令實名制一拖再拖。他認為實名制十分重要﹐又強調實名制並不擾民，。他指市民進入演唱會場地亦需掃描二維碼，不會加長排隊輪候時間。</p>
 <p><strong>倡取消熔斷機制：諗唔通仲有乜嘢角色</strong></p>
 <p>日前特首林鄭月娥在記者會上指，政府目前暫無計劃取消熔斷機制。田北辰指不解林鄭決定，認為現時香港疫情緩和，大部分人口染疫，除非有新型病毒出現，否則熔斷機制作用不大。</p>
-<p>他又提到，現時從外地輸入的個案均在機場或隔離酒店已成功攔截，個案沒可能流入社區。他指對比本地確診個案，外來輸入個案簡直是「牛同蚊比」，加上大部分人已接種疫苗、口服藥及隔離設施充足，「𢯎穿頭都諗唔通熔斷機制仲有乜嘢角色扮演。」他指很多人反映「買咗機票，突然間又冇咗」，導致旅客選擇到其他國家轉機，「送哂啲生意俾新加坡」，令香港國際樞紐地位受損。</p>
+<p>他又提到，現時從外地輸入的個案均在機場或隔離酒店已成功攔截，個案沒可能流入社區。他指對比本地確診個案，外來輸入個案簡直是「牛同蚊比」，加上大部分人已接種疫苗、口服藥及隔離設施充足，「𢯎穿頭都諗唔通熔斷機制仲有乜嘢角色扮演。」他指很多人反映「買咗機票，突然間又冇咗」，導致旅客選擇到其他國家轉機，「送晒啲生意俾新加坡」，令香港國際樞紐地位受損。</p>
 <p>他又強調取消熔斷機制並不會和「動態清零」相違背，認為「動態清零」只針對本地個案，只要維持七日酒店檢疫，問題便不大。</p>
 </div></div></div>
