Update VOCUS 2022-04-28 patch

--- a/_posts/2022-04-07-VOCUS-同人-碧藍航線-時空的穿越者-第十三話.html
+++ b/_posts/2022-04-07-VOCUS-同人-碧藍航線-時空的穿越者-第十三話.html
@@ -8,7 +8,7 @@ tags: blog
 author: Writing 生活玩家
 ---
 
-<div class="draft--imgNormal draft-block"><div><div style="height:1920px" class="image-block-prerender" data-src="https://images.vocus.cc/d82d544b-ca9d-4de3-bce7-9e5bf7a7e377.jpg" data-width="1920" data-height="1080" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/d82d544b-ca9d-4de3-bce7-9e5bf7a7e377.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div>
 <div class="draft-block draft--p left">重櫻的根據地重建，就在傑洛斯回來後第二天立刻就展開了，不少黃色小雞用那單薄的翅膀舉著建材到處奔波，那智和妙高也投入興建食堂的行列，當初說要建設食堂時，是大家最開心的一件事，因此港區重建的第一個建築，就是把食堂建好，在建材還夠的狀況下，大家期待著食堂的啟用。</div>
 <div class="draft-block draft--p left">然後住所方面，經過多方討論後，除了整修之前損毀的部分外，還規劃了一個區域，就在原住所的後面，搭建一整排的現代式【宿舍】，傑洛斯親自參與了設計，愛宕則是暗中修改設計圖，因為【靜】以前是多媒體設計系畢業，所以她曉得一些美感兼具實用的訣竅，就這樣，港區最近開始熱鬧起來，來來回回的小雞充當工人幫忙，的確讓傑洛斯省去很多麻煩。</div>
 <div class="draft-block draft--p left">傑洛斯也在港區內規劃一處維修製造區，好讓她們可以在那裡互相交流整理裝備，此區塊的工具準備在華盛頓的幫忙下很快就完成，她還充當維修檢查員，幫忙檢查大家的裝備和維護。</div>
