--- a/_posts/2022-04-27-VOCUS-同人-碧藍航線-時空的穿越者-第十四話.html
+++ b/_posts/2022-04-27-VOCUS-同人-碧藍航線-時空的穿越者-第十四話.html
@@ -8,7 +8,7 @@ tags: blog
 author: Writing 生活玩家
 ---
 
-<div class="draft--imgNormal draft-block"><div><div style="height:640px" class="image-block-prerender" data-src="https://images.vocus.cc/176c3864-17aa-4dcc-afba-38efdd86330e.jpg" data-width="640" data-height="452" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block">碧藍航線 明石</figcaption></div></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/176c3864-17aa-4dcc-afba-38efdd86330e.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">碧藍航線 明石</figcaption></div>
 <div class="draft-block draft--p left">在重櫻港區內的維修製造區，明石興奮的到處走走看看，她不時的拿起桌上的工具，然後跑到巨大的裝備架東張西望，對這裡的每一件東西都非常感興趣。</div>
 <div class="draft-block draft--p left">「這裡很大很新～我喜歡這個地方喵～」</div>
 <div class="draft-block draft--p left">「是吧～以後這裡就交給妳和不知火了。」</div>
@@ -130,5 +130,3 @@ author: Writing 生活玩家
 <div class="draft-block draft--p left">雷和電向瑞鶴回報前方海域狀況，武器都已經準備好，只等著下一個指令，長良和五十鈴一左一右在航母旁散開，形成一個前方防禦陣式，因為判定對方沒有航母隨行，所以護航的四位都在瑞鶴號的前方警戒。</div>
 <div class="draft-block draft--p left">不過飛行甲板上的光榮瞬間變了神情，一臉怒氣的看著前方隱隱約約的船隻身影。</div>
 <div class="draft-block draft--p left">「那是鐵血的.....沙恩霍斯特和格奈森瑙....」</div>
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left"></div>
