--- a/_posts/2022-04-27-VOCUS-政治-惦惦的電電.html
+++ b/_posts/2022-04-27-VOCUS-政治-惦惦的電電.html
@@ -8,33 +8,25 @@ tags: blog
 author: 蘇 遇
 ---
 
-<div class="draft-block draft--p left"></div>
-<div class="draft--imgNormal draft-block"><div><div style="height:undefinedpx" class="image-block-prerender" data-src="https://images.vocus.cc/32c8cc26-ea93-4a18-b945-b7cf27e366bd.webp" data-width="0" data-height="0" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block">圖／翻攝自台電網站</figcaption></div></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/32c8cc26-ea93-4a18-b945-b7cf27e366bd.webp"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">圖／翻攝自台電網站</figcaption></div>
 <h3 class="draft-block draft--h3" name="header-62kjn">說好的不缺電，當然也就不會限電，但或許一切都是謊言。</h3>
 <div class="hr__AtomHrContainer-sc-1afmttx-0 dsBIOm draft-block"><pre class="hr__HrWrapper-sc-1afmttx-1 hUbgX draft--hr"><hr class="hr__Hr-sc-1afmttx-2 dOXRXF"></pre></div>
-<div class="draft-block draft--p left"></div>
 <blockquote class="draft-block draft--blockquote"><span style="font-weight: bold; ">家庭用電量</span></blockquote>
 <div class="draft-block draft--p left"><span style="text-decoration: underline; ">國內疫情持續升溫，不少公司開始分流上班，居家隔離的也不在少數且還會繼續增多，這些原因導致用電量大增，且近期炎熱用電量也不可能太過於少量，接下來的夏天將會是對台灣能源政策的一大考驗與關卡。</span></div>
 <div class="hr__AtomHrContainer-sc-1afmttx-0 dsBIOm draft-block"><pre class="hr__HrWrapper-sc-1afmttx-1 hUbgX draft--hr"><hr class="hr__Hr-sc-1afmttx-2 dOXRXF"></pre></div>
-<div class="draft-block draft--p left"></div>
 <blockquote class="draft-block draft--blockquote"><span style="font-weight: bold; ">狀況</span></blockquote>
 <div class="draft-block draft--p left"><span style="text-decoration: underline; ">在昨日台中火力電廠7號機組破管，昨晚6點多太陽下山之後，缺少光電的挹注電能，全台灣電力的備轉容量率掉到了2％，都是太陽的問題，為甚麼要下山導致沒有電力，當然今日的備轉率目前是供電吃緊的8.97％，但等到傍晚太陽下山之後預計僅僅只會剩下3％，供電確實是非常緊張，因為用電負載的增加，當然很多人都歸咎於太陽下山、台中機主破管、公司分流上班、學生在家上課，居家隔離人數飆升等，但有沒有仔細想過或許我們本來就能源不足的窘態。</span></div>
 <div class="hr__AtomHrContainer-sc-1afmttx-0 dsBIOm draft-block"><pre class="hr__HrWrapper-sc-1afmttx-1 hUbgX draft--hr"><hr class="hr__Hr-sc-1afmttx-2 dOXRXF"></pre></div>
-<div class="draft-block draft--p left"></div>
 <blockquote class="draft-block draft--blockquote"><span style="font-weight: bold; ">狀態</span></blockquote>
 <div class="draft-block draft--p left"><span style="text-decoration: underline; ">自始至終我們其實都是需要核能的存在，只是核四能不能使用又或者核一核二是否要除役還有可用性與安全性的問題都需要謹慎考量其使用的狀態，面對各種科技園區的成立，半導體等電子廠的24小時不停機，夏天到了許多學校每班裝設的冷氣，疫情共存的居家隔離、學生的居家上課還有公司的分流都是用電量大增的主因，有些還是長遠的耗電事情，在要發展經濟的當下，依賴穩定度不足的綠能實在比大話西遊還誇張到可以，當然太陽能的確有滿大的輸出能力，但台灣的陰晴不定再加上有下山的疑慮，太陽的確並不是那樣的可行性，但終究人民會在被騙之後才會知道謎底，不是漲電價以價制量就是停電而已。</span></div>
 <div class="hr__AtomHrContainer-sc-1afmttx-0 dsBIOm draft-block"><pre class="hr__HrWrapper-sc-1afmttx-1 hUbgX draft--hr"><hr class="hr__Hr-sc-1afmttx-2 dOXRXF"></pre></div>
-<div class="draft-block draft--p left"></div>
 <blockquote class="draft-block draft--blockquote"><span style="font-weight: bold; ">停電</span></blockquote>
 <div class="draft-block draft--p left"><span style="text-decoration: underline; ">每個地方的狀況都不一定，總之就是會有許多奇怪的問題，就像昨夜南港也是有短暫大概三、四小時的停電出現蹤跡，但好像是甚麼老舊失修等問題，這我可以理解，但這機率也太過於頻繁到不可思議，在這麼炎熱的狀況下停電確實會讓人很不高興，沒冷氣吹就算了連電風扇都失靈，這要讓人如何入睡甚至也沒有電視可以追肥皂劇，想想三年後台灣號稱沒有所謂的核電，那台灣又該往哪個地方去尋找能源，綠能環保大家都想要，但經濟要起飛怎麼可能不需要電，所以在發展的奇況下，許多國家早已把核能視為綠色能源的其中之一，因為對環境並不會像天然氣或者火力發電那樣立即的造成威脅，溫室效應的重點。</span></div>
 <div class="hr__AtomHrContainer-sc-1afmttx-0 dsBIOm draft-block"><pre class="hr__HrWrapper-sc-1afmttx-1 hUbgX draft--hr"><hr class="hr__Hr-sc-1afmttx-2 dOXRXF"></pre></div>
-<div class="draft-block draft--p left"></div>
 <blockquote class="draft-block draft--blockquote"><span style="font-weight: bold; ">核電</span></blockquote>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">談灣的三大核電廠預計將在2025年全數退役，到時候核電將走入台灣歷史。</span></div>
 <div class="draft-block draft--p left"><span style="text-decoration: underline; ">然而綜觀全球，雖然福島核電廠事故掀起全球對核能的顧慮，但到了2020年代，淨零碳排成為全球共識，將近30個國家將此訂定為目標，但在綠電難以填補能源缺口的情況下，核電被視為最為可靠的零碳能源替代方案。</span></div>
 <h2 class="draft-block draft--h2" name="header-90kk6">但台灣人不買單。</h2>
 <div class="hr__AtomHrContainer-sc-1afmttx-0 dsBIOm draft-block"><pre class="hr__HrWrapper-sc-1afmttx-1 hUbgX draft--hr"><hr class="hr__Hr-sc-1afmttx-2 dOXRXF"></pre></div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">所以停電不會只是突發狀況而會是常態，不要說我危言聳聽，而是看看新聞或者是網路上的消息來判斷，台電網站也都能看到透明的用電量與被轉量能，至於最重要的還是要看太陽會不會下山，如果漲電價我也不會感到太意外，油電雙漲雖然緩慢但我相信還是讓民眾很有感，大家加油，天佑台灣。</span></div>
 <div class="hr__AtomHrContainer-sc-1afmttx-0 dsBIOm draft-block"><pre class="hr__HrWrapper-sc-1afmttx-1 hUbgX draft--hr"><hr class="hr__Hr-sc-1afmttx-2 dOXRXF"></pre></div>
-<div class="draft-block draft--p left"></div>
