--- a/_posts/2022-04-27-VOCUS-政治-新加坡的共存.html
+++ b/_posts/2022-04-27-VOCUS-政治-新加坡的共存.html
@@ -8,29 +8,20 @@ tags: blog
 author: 蘇 遇
 ---
 
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left"></div>
-<div class="draft--imgNormal draft-block"><div><div style="height:1024px" class="image-block-prerender" data-src="https://images.vocus.cc/2dfd654d-6494-4efb-84e4-db7cf6f842ba.jpg" data-width="1024" data-height="768" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block">圖 / 中央社 </figcaption></div></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/2dfd654d-6494-4efb-84e4-db7cf6f842ba.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">圖 / 中央社 </figcaption></div>
 <h3 class="draft-block draft--h3" name="header-8o6hq">新加坡Omicron疫情趨穩之際，並擴大鬆綁多項防疫措施。</h3>
 <div class="hr__AtomHrContainer-sc-1afmttx-0 dsBIOm draft-block"><pre class="hr__HrWrapper-sc-1afmttx-1 hUbgX draft--hr"><hr class="hr__Hr-sc-1afmttx-2 dOXRXF"></pre></div>
-<div class="draft-block draft--p left"></div>
 <blockquote class="draft-block draft--blockquote"><span style="font-weight: bold; ">習慣</span></blockquote>
 <div class="draft-block draft--p left"><span style="text-decoration: underline; ">新加坡從昨（26）日開始，全面取消新冠防疫限制，除了在室內仍然必須戴口罩之外，所有生活幾乎回到從前，他們曾經過經歷單日確診者超過2萬5000人，到如今解除境內絕大部分新冠防疫要求，除了不再限制室內聚會人數，並允許所有上班族全部回辦公室工作之外，也放寬國際旅客的入境規則，不再要求旅客入境新加坡之前，要做新冠病毒檢測，新加坡媒體報導，解除管制的第一天，民眾在購物商場，不必再一一排隊等候入內，不必再保持社交距離，可以隨意自由進出，也不必再刷安全二維碼，在民眾不太習慣下也證明新加坡終於「恢復正常」了。</span></div>
 <div class="hr__AtomHrContainer-sc-1afmttx-0 dsBIOm draft-block"><pre class="hr__HrWrapper-sc-1afmttx-1 hUbgX draft--hr"><hr class="hr__Hr-sc-1afmttx-2 dOXRXF"></pre></div>
-<div class="draft-block draft--p left"></div>
 <blockquote class="draft-block draft--blockquote"><span style="font-weight: bold; ">政府</span></blockquote>
 <div class="draft-block draft--p left"><span style="text-decoration: underline; ">決策很重要，拍板更加重要，在提高疫苗接種率的前提之下，星國試推了確診者居家這件事情，宣導要和新冠病毒共存，宣布多數只有輕微症狀的確診病例可以在家休養，並且每戶發一台血氧機，染疫每天快篩且新加坡快篩是免費由政府提供，當政府正式把防疫的責任交還給人民，但卻又時時提供人民所需的工具，免費當然比人民自己花錢來的貼心，而且還有足夠的量能能夠支應老百姓的使用頻率，要共存就必須得有大筆資金，而不是東西備不足而要人民自己想辦法，政府的輔助對於自主防疫來說是很大的一個助力與鼓勵。</span></div>
 <div class="hr__AtomHrContainer-sc-1afmttx-0 dsBIOm draft-block"><pre class="hr__HrWrapper-sc-1afmttx-1 hUbgX draft--hr"><hr class="hr__Hr-sc-1afmttx-2 dOXRXF"></pre></div>
-<div class="draft-block draft--p left"></div>
 <blockquote class="draft-block draft--blockquote"><span style="font-weight: bold; ">病例暴增</span></blockquote>
 <div class="draft-block draft--p left"><span style="text-decoration: underline; ">在初始階段病例的暴增是無可避免的，在「與病毒一起生活」的流程裡這是一個必經過程，取消居家還有強制隔離在一定邏輯上也加快了病毒的傳播與傳染力，然而所帶來的經濟與政治代價更是巨大無比，但這就是痛一時之後風平浪靜，大家能夠習慣就像感冒一般不用太過於恐慌與緊張情緒，當周遭的家人、鄰居或者朋友都像得了感冒一樣過幾天就恢復了，那自然而然這件事情就會成為人們心理上的適應，畢竟Omicron變種病毒株的毒性更低，所以前陣子才有人說出這次的變種病毒株是共存的最好機會與時機。</span></div>
 <div class="hr__AtomHrContainer-sc-1afmttx-0 dsBIOm draft-block"><pre class="hr__HrWrapper-sc-1afmttx-1 hUbgX draft--hr"><hr class="hr__Hr-sc-1afmttx-2 dOXRXF"></pre></div>
-<div class="draft-block draft--p left"></div>
 <blockquote class="draft-block draft--blockquote"><span style="font-weight: bold; ">信心</span></blockquote>
 <div class="draft-block draft--p left"><span style="text-decoration: underline; ">只要政府做足把握，人民自然有足夠的勇氣做到共存這件事情，各個年齡層都能夠達到足夠的保護力，有大量的口服防重症藥物可以供給給全國人民，足夠劑量的快篩能夠讓人民自主管理，那麼居家康復就會是一劑心理疫苗，讓人民不再對這種病毒感到恐慌與恐懼，可以正常上班上學，不用怕傳染與染疫，解封開放一定是未來的大勢所趨，只是必須先度過陣痛期，長與短就得看政府的準備與給人民的信心程度到哪裡了。</span></div>
 <div class="hr__AtomHrContainer-sc-1afmttx-0 dsBIOm draft-block"><pre class="hr__HrWrapper-sc-1afmttx-1 hUbgX draft--hr"><hr class="hr__Hr-sc-1afmttx-2 dOXRXF"></pre></div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">對於台灣來說還是有很多不足的地方，雖然各高官都有出來喊話，但實際作為還真的需要有待加強，想要順應趨勢就得做足準備至少要有樣學樣，別人有甚麼我們也該有相同的東西對應的地方，不要原料不同卻想跟對方做出一樣優秀的作品受到表揚，原料相同都不見得一模一樣，何況模仿。</span></div>
 <div class="hr__AtomHrContainer-sc-1afmttx-0 dsBIOm draft-block"><pre class="hr__HrWrapper-sc-1afmttx-1 hUbgX draft--hr"><hr class="hr__Hr-sc-1afmttx-2 dOXRXF"></pre></div>
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left"></div>
