--- a/_posts/2022-04-27-VOCUS-快篩試劑實名制1.0上路-忽略了什麼.html
+++ b/_posts/2022-04-27-VOCUS-快篩試劑實名制1.0上路-忽略了什麼.html
@@ -9,8 +9,7 @@ author: 陳伯彥
 ---
 
 <blockquote class="draft-block draft--blockquote">今日（4月27日星期三）中央防疫記者會上，公布了快篩實名制的管道，根據<a href="https://www.cdc.gov.tw/Bulletin/Detail/jgRik-rw93PUUhyZj_ut-g?typeid=9" target="_blank" class="draft--a">新聞稿</a>的內容，是為了「希望讓更多有需要的民眾買得到平價的實名制家用快篩試劑，平抑市售家用快篩試劑售價，以利控制疫情，並維護民眾健康之權益。」上述談到的管道，預計於4月28日上路，<span style="font-weight: bold; ">但是這樣快篩試劑的取得，事實上仍有疑慮存在</span>，以下筆者針對<span style="font-weight: bold; ">取得面、成本面、學生面三個面向</span>進行討論：</blockquote>
-<div class="draft--imgNormal draft-block"><div><div style="height:2048px" class="image-block-prerender" data-src="https://images.vocus.cc/a20be64e-4bf2-4532-8057-837d8a02c18b.jpg" data-width="2048" data-height="1449" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block">家用快篩實名制詳細內容，資料來源取自衛生福利部</figcaption></div></div>
-<div class="draft-block draft--p left"></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/a20be64e-4bf2-4532-8057-837d8a02c18b.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">家用快篩實名制詳細內容，資料來源取自衛生福利部</figcaption></div>
 <div class="draft-block draft--quotesSpecial center"><div class="content"><span style="font-weight: bold; ">不是每個人都能夠輕易買到100塊的快篩試劑</span></div></div>
 <div class="draft-block draft--p left">首先，取得面而言，從目前的制度來看，要能夠買到100塊快篩試劑必須要符合四個條件：</div>
 <ol>
@@ -26,7 +25,6 @@ author: 陳伯彥
 <div class="draft-block draft--p left">相對應而言，<span style="font-weight: bold; ">影響最大的是負擔面</span>，<span style="font-weight: bold; ">跟口罩領取不同的是，</span>並非所有人都會需要接受快篩<span style="font-weight: bold; ">，需要接受快篩的是接觸多數不特定人的族群。</span></div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">而快篩的費用，並未如口罩費用便宜，而是單價高達100塊</span>。對於許多人而言，可能並非只有使用一次，若<span style="font-weight: bold; ">因為身分、職業</span>等因素，導致快篩是必須<span style="font-weight: bold; ">持續不斷</span>檢測使用的情形下<span style="font-weight: bold; ">，</span>可能一週要使用<span style="font-weight: bold; ">兩到三次</span>，<span style="font-weight: bold; ">一個月而言</span>的開銷可能最高可能<span style="font-weight: bold; ">高達1200元</span>，這樣的額外支出是非常可觀的。<span style="font-weight: bold; ">長期而言，必然會造成一定程度的經濟負擔</span>，而政府更<span style="font-weight: bold; ">應該對於經濟上較為弱勢族群應該予以相關補助政策或降低快篩試劑費用。</span></div>
 <div class="draft-block draft--p left">當然，可能礙於現行實名制1.0剛實行沒有考量完整，但令人疑問的是，<span style="font-weight: bold; ">明明已有口罩實名制的前車之鑑，為何不以之為借鏡，進行更完善的政策制定？如果經濟弱勢者，無法取得快篩進行檢測，在未來需要進行長期進行快篩的防疫政策下，他們的權益就會因此受損。</span></div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--quotesSpecial center"><div class="content"><span style="font-weight: bold; ">學生是最需要負擔快篩成本的人</span></div></div>
 <div class="draft-block draft--p left">誠如上述談到的負擔，筆者認為，如果現有防疫政策是以病毒共存為展望，快篩試劑必然是未來重要的管制疫情的方式，因此可能<span style="font-weight: bold; ">首要衝擊的是受教育之學生族群。</span></div>
 <div class="draft-block draft--p left">近期隨著確診人數上升，在學校有許多學生確診，部分大學如台大或東吳皆是針對課堂達80人數修課時，得以改採線上教學的方式。反之，若是80人以下，還是需要進入校園實體上課。<span style="font-weight: bold; ">不過，與之呼應的是大學生如果要去上課的話，可能就必須先快篩後確認是否有無感染，才能確保自己不會擴大傳染於其他人。當然這樣的現象，不僅限於大學生，亦包含其他的學生族群，如國、高中。</span></div>
@@ -35,13 +33,4 @@ author: 陳伯彥
 <div class="draft-block draft--p left">事實上，不僅是學生，若是因為工作而需要定期快篩，如教師等會接觸不特定人的職業，都有可能是衝擊到的族群，這樣的成本也同樣不應該由他們負擔。</div>
 <div class="draft-block draft--quotesSpecial center"><div class="content"><span style="font-weight: bold; ">快篩實名制</span>1.0<span style="font-weight: bold; ">只是一種急就章的制度</span></div></div>
 <div class="draft-block draft--p left">政府這樣貿然將快篩實名制推行，而忽略了有些人可能不便利取得、弱勢族群無法承擔這樣的費用及學生族群根本沒有辦法長期負擔快篩的支出，而上述提到的種種可能問題，還有待政府及時提出相對應的政策來進行解決。</div>
-<div class="draft-block draft--p left">最後，願大家都能與病毒抗衡、身體健康。<br><br><br><br></div>
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left"></div>
+<div class="draft-block draft--p left">最後，願大家都能與病毒抗衡、身體健康。</div>
