--- a/_posts/2022-04-27-VOCUS-沙中線工程懷疑虛假文書事件引發工程師憂慮刑事責任.html
+++ b/_posts/2022-04-27-VOCUS-沙中線工程懷疑虛假文書事件引發工程師憂慮刑事責任.html
@@ -9,7 +9,7 @@ author: REDBRIC
 ---
 
 <p>沙中線工程被傳媒揭發多宗懷疑造假事件，政府最終決定報警及成立獨立調查委員會跟進，其中以今年8月7日的記招內容最令工程界專業人士憂慮，因為政府認為 『港鐵上月提交的紅磡站連續牆圖則報告，與屋宇署同意的圖則不相符，嚴重偏差，...  』 (詳見https://sosreader.com/n/@ecyY/5b69adedfd8978000165dbd5) 而工程師學會(前)會長，亦是今次事件的關連人士，黃唯銘在接受南早訪問時指出今次事件令工程師擔心日後更改設計須承擔刑事責任，而『建築物條例註明輕微修改毋須向屋宇署入則，但缺乏清晰定義。如果每項設計修改均須等候兩三個月，這將會為建造業界帶來災難』("The Buildings Ordinance says that for minor changes we don't have to submit the revised plans to the department, but there is a lack of a clear definition. This will be a disaster for the construction sector if we have to wait two or three months for every design change.") [1]</p>
-<p><br></p>
+<img src="https://images.vocus.cc/e4ba5c8a-7b8a-4410-b049-6e858b257d61.png">
 <p>關於輕微修改毋須入則批准的講法，相信並非直接來自建築物條例，而是建築事務監督根據條例第42(1)條授權 [<strong>建築事務監督的豁免權力]</strong> ，修改建築物(管理)規例第33(1)條 [<strong>建築工程及街道工程的改動或加建]</strong>，發出作業備考 PNAP ADM-19 [Building Approval Process]，第18段註明除附件G另有規定外，如已獲首次同意，輕微修改建築工程、上蓋結構工程及渠務工程可獲豁免預先審批和同意程序的要求。原文只有英文文本，內容如下：18. ... prior approval and consent to the minor amendments of buildings, superstructure  and drainage works, for which the first consent has already been given, would not be required except for the amendments described in Appendix G. [2]</p>
 <p>重點在於prior 和 minor 兩字，首先，豁免預先審批及同意程序，不代表豁免程序，只代表接受延後程序；另外，何謂輕微修改，須根據附件G的內容決定。</p>
 <p>附件G的欄目為 List of Minor Amendments Not Qualified for Deferring Submission，其中關於上蓋結構的輕微修改必須不影響樓宇的整體結構穩定 (affecting the overall structural stability of the building.)。然而，何謂整體結構穩定可能就是黃唯銘所指的沒有清晰定義。今次沙中線紅磡站修改連續牆的鋼筋接駁方法，政府認為嚴重偏差，不能接受，但項目的工程師當時可能專業判斷為輕微修改，不影響整體結構穩定，因此未有預先入修改圖則。事件反映豁免機制存在重大缺失，一旦屋宇署事後不接納該修改為輕微修改，工程既要拆卸重造，更可能被控以虛假文書罪和違法僭建 (違反建築物條例第14條)，負上刑事責任。</p>
