--- a/_posts/2022-04-28-INITIUM-通利琴行在香港-七十年-许多香港人说-没有这家琴行就没今日的我.html
+++ b/_posts/2022-04-28-INITIUM-通利琴行在香港-七十年-许多香港人说-没有这家琴行就没今日的我.html
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 通利琴行在香港：七十年，许多香港人说，没有这家琴行就没今日的我？
+title: 通利琴行在香港：七十年，许多香港人说，没有这家琴行就没今日的我
 date: 2022-04-28 01:11:00.000000000 +00:00
 link: https://theinitium.com/article/20220428-culture-tomlee-memory-hk/
 categories: initium
@@ -8,7 +8,7 @@ tags: blog
 author: 特约撰稿人 卢燕珊 发自香港
 ---
 
-<p>「楼梯底起家的小琴行，却主导建构了“香港音乐生命共同体”？辐射之广，令许多似乎无关音乐的市民也接触到它装设的香港声响景观⋯」</p><p>特约撰稿人 卢燕珊 发自香港</p><figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20220428-culture-tomlee-memory-hk/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/04/f70468a04c1940089ec709d5ab8a1ff8.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="通利琴行创办人李子文早前逝世，享年101岁。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
+<p>「你的第一件乐器也在通利买？这家楼梯底起家的小琴行，却如此深而动人的参与了香港的生命建构⋯⋯」</p><p>特约撰稿人 卢燕珊 发自香港</p><figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20220428-culture-tomlee-memory-hk/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/04/f70468a04c1940089ec709d5ab8a1ff8.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="通利琴行创办人李子文早前逝世，享年101岁。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
             <figcaption itemprop="caption">通利琴行创办人李子文早前逝世，享年101岁。<span class="credit">图：通利琴行 Facebook</span></figcaption></figure><p><small>这首歌不会太励志<br>
 志在于漆黑中讲一点小事<br>
 没阳光的一日 太难的不必坚持<br>
