--- a/_posts/2022-04-27-INMEDIA-兩名立會新西參選人認無交選舉申報-還柙下月判刑.html
+++ b/_posts/2022-04-27-INMEDIA-兩名立會新西參選人認無交選舉申報-還柙下月判刑.html
@@ -8,7 +8,7 @@ tags: blog
 author: 獨媒報導
 ---
 
-<img src="https://images.weserv.nl/?url=inmediahk.net/files/column_images/0207111%20%281%29_82.png" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">（獨媒報導）</font>參選2019年區議會葵青選區但落敗的前民主動力成員趙寶琴，在前年再戰立法會新界西，與巴士司機王振霖合組名單。其後選舉取消並押後一年，兩人被指沒有依選舉法例，提交選舉申報書被廉署起訴。兩人今在觀塘裁判法院認罪，遭裁判官杜浩成下令還柙至下月11月判刑。</p>
+<img src="https://images.weserv.nl/?url=inmediahk.net/files/column_images/0207111%20%281%29_82.png" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">（獨媒報導）</font>參選2019年區議會葵青選區但落敗的前民主動力成員趙寶琴，在前年再戰立法會新界西，與巴士司機王振霖合組名單。其後選舉取消並押後一年，兩人被指沒有依選舉法例，提交選舉申報書被廉署起訴。兩人今在觀塘裁判法院認罪，遭裁判官杜浩成下令還柙至下月11日判刑。</p>
 <p>兩名被告分別為報稱護士的趙寶琴（47歲）及王振霖（41歲）。兩人被指違反《選舉（舞弊及非法行為）條例》規定，沒有提交選舉申報書。裁判官杜浩成將案件押後至5月11日判刑，以索取兩人的背景報告，期間要還柙，由懲教看管。</p>
 <p>案情指，換屆選舉原訂2020年9月6日舉行，選舉事務處接獲兩被告在新界西地方選區的提名表格，兩名告屬名一名單，趙寶琴排第一。選舉事務處向兩人提供載有空白選舉申報書的候選人資料冊、選舉申報書指引，以及候選人應辦事項備忘。備忘註明同一份提名名單上的候選人，須向選舉事務處呈交一份選舉申報書。</p>
 <p>其後政府引用緊急法中止選舉，但候選人仍要在9月29日前提交選舉申報書，選舉事務處於8月14日發送掛號信給提醒兩人，重申期限至9月29日。但截至法定限期，亦沒有收到二人的選舉申報書。</p>
