--- a/_posts/2022-04-28-PQ-425比0-美眾議院一致通過法案挺台重返wha.html
+++ b/_posts/2022-04-28-PQ-425比0-美眾議院一致通過法案挺台重返wha.html
@@ -12,7 +12,7 @@ author: 林志鴻
 
 
 
-<div class="wp-block-image"><figure class="aligncenter size-large"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2020/07/2fe7e3a6-6946430257_a9d9f6d732_k-1024x682.jpg" alt="" class="wp-image-33765" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2020/07/2fe7e3a6-6946430257_a9d9f6d732_k-1024x682.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2020/07/2fe7e3a6-6946430257_a9d9f6d732_k-300x200.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2020/07/2fe7e3a6-6946430257_a9d9f6d732_k-768x512.jpg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2020/07/2fe7e3a6-6946430257_a9d9f6d732_k.jpg 1300w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>世界衛生組織（WHO）官方旗幟／圖：U.S. Mission Photo by Eric Bridiers (CC BY-ND 2.0)。</figcaption></figure></div>
+<div class="wp-block-image"><figure class="aligncenter size-large"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2020/07/2fe7e3a6-6946430257_a9d9f6d732_k-1024x682.jpg" alt="" class="wp-image-33765" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2020/07/2fe7e3a6-6946430257_a9d9f6d732_k-1024x682.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2020/07/2fe7e3a6-6946430257_a9d9f6d732_k-300x200.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2020/07/2fe7e3a6-6946430257_a9d9f6d732_k-768x512.jpg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2020/07/2fe7e3a6-6946430257_a9d9f6d732_k.jpg 1300w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>世界衛生組織（WHO）官方旗幟／圖：U.S. Mission Photo by Eric Bridiers (CC BY-ND 2.0)。</figcaption></figure></div>
 
 
 
@@ -28,7 +28,7 @@ author: 林志鴻
 
 
 
-<p>康諾里指出，很不幸地，中國試圖限縮台灣有意義參與所有國際組織，包括 2017 年施壓 WHO 剝奪台灣觀察員身分，直批「這不合理」。他強調，在 5 月 WHA 召開前通過這部法案，將展現美國國會對於民主台灣橫跨兩院與兩黨的強健承諾。</p>
+<p>康諾里指出，很不幸地，<strong>中國試圖限縮台灣有意義參與所有國際組織，包括 2017 年施壓 WHO 剝奪台灣觀察員身分，直批「這不合理」。</strong>他強調，在 5 月 WHA 召開前通過這部法案，將展現美國國會對於民主台灣橫跨兩院與兩黨的強健承諾。</p>
 
 
 
@@ -36,7 +36,7 @@ author: 林志鴻
 
 
 
-<p>美國國會 2004 年 5 月曾通過法案，指示國務卿研擬計畫，支持並協助台灣取得 WHA 觀察員身分，台灣隨後也順利在 2009 年至 2016 年間以觀察員身分受邀。但自 2017 年來，儘管有美國支持，台灣仍因中國施壓連續多年未能參與 WHA。</p>
+<p>美國國會 2004 年 5 月曾通過法案，指示國務卿研擬計畫，支持並協助台灣取得 WHA 觀察員身分，台灣隨後也順利在 2009 年至 2016 年間以觀察員身分受邀。<strong>但自 2017 年來，儘管有美國支持，台灣仍因中國施壓連續多年未能參與 WHA。</strong></p>
 
 
 
@@ -44,7 +44,7 @@ author: 林志鴻
 
 
 
-<p>長期關心台美關係的組織「US Taiwan Watch：美國台灣觀測站」分析，在眾議院的表決不像參議院一樣能用「無異議通過」的方式尋求「快速通關」，這次是採用記名投票表決，還是以這種誇張的票數獲得通過，這可以顯示美國目前挺台聲浪絕對是跨黨派的。​</p>
+<p>長期關心台美關係的組織「US Taiwan Watch：美國台灣觀測站」分析，在眾議院的表決不像參議院一樣能用「無異議通過」的方式尋求「快速通關」，這次是採用記名投票表決，還是以這種誇張的票數獲得通過，<strong>這可以顯示美國目前挺台聲浪絕對是跨黨派的。​</strong></p>
 
 
 
@@ -56,7 +56,7 @@ author: 林志鴻
 
 
 
-<p>外交部指出，斯洛伐克國會曾於去年通過決議支持台灣參與 WHA，外交委員會今年再度通過決議挺台，文中特別讚許台灣與國際社會分享醫療資源及發揮人道精神援助烏克蘭的善舉。此外，斯國國會衛生委員會也首度通過友台決議，肯定台灣過去兩年來防疫表現卓越，兼顧經濟穩健成長，並高度讚許台灣捐贈口罩等醫療物資，對烏克蘭提供人道援助。</p>
+<p>外交部指出，<strong>斯洛伐克國會曾於去年通過決議支持台灣參與 WHA，外交委員會今年再度通過決議挺台</strong>，文中特別讚許台灣與國際社會分享醫療資源及發揮人道精神援助烏克蘭的善舉。此外，斯國國會衛生委員會也首度通過友台決議，肯定台灣過去兩年來防疫表現卓越，兼顧經濟穩健成長，並高度讚許台灣捐贈口罩等醫療物資，對烏克蘭提供人道援助。</p>
 
 
 
@@ -72,11 +72,11 @@ author: 林志鴻
 
 
 
-<p>外交部強調，今年迄今歐洲議會已四度通過友台決議，呼籲保障台灣民主、關切台海及印太地區的和平穩定，並支持台灣參與國際組織。歐盟會員國方面，除斯洛伐克外，英國、法國、德國、義大利、瑞典、丹麥、捷克、荷蘭、比利時、盧森堡等國政府或國會，也曾多次以不同行動表達對台灣的重視與關切。</p>
+<p>外交部強調，<strong>今年迄今歐洲議會已四度通過友台決議，呼籲保障台灣民主、關切台海及印太地區的和平穩定，並支持台灣參與國際組織。</strong>歐盟會員國方面，除斯洛伐克外，英國、法國、德國、義大利、瑞典、丹麥、捷克、荷蘭、比利時、盧森堡等國政府或國會，也曾多次以不同行動表達對台灣的重視與關切。</p>
 
 
 
-<p>外交部指出，其中丹麥國會今年 3 月通過友我決議，支持台灣取得 WHA 觀察員身分；英國國會上、下議院分別以辯論及「動議案」方式，支持台灣參與 WHA；瑞典外交部長林德（Ann Linde）在國會應詢時表示，瑞典政府支持台灣參與世界衛生組織（WHO）各項抗疫工作，並以觀察員身分參與 WHA 等。外交部對歐洲理念相近夥伴對台灣參與國際組織給予的支持皆表達高度謝忱。</p>
+<p>外交部指出，其中<strong>丹麥國會</strong>今年 3 月通過友我決議，支持台灣取得 WHA 觀察員身分；<strong>英國國會上、下議院</strong>分別以辯論及「動議案」方式，支持台灣參與 WHA；瑞典外交部長林德（Ann Linde）在國會應詢時表示，<strong>瑞典政府</strong>支持台灣參與世界衛生組織（WHO）各項抗疫工作，並以觀察員身分參與 WHA 等。外交部對歐洲理念相近夥伴對台灣參與國際組織給予的支持皆表達高度謝忱。</p>
 
 
 
@@ -88,11 +88,11 @@ author: 林志鴻
 
 
 
-<p>今年 4 月 25 日適逢溫哥華一年一度的太陽長跑，駐溫哥華辦事處和僑界共 50 人組隊參加，打出「為台灣參加WHA而跑」口號，透過活動凝聚更多支持台灣的力量。</p>
+<p>今年 4 月 25 日適逢溫哥華一年一度的太陽長跑，駐溫哥華辦事處和僑界共 50 人組隊參加，打出「為台灣參加 WHA 而跑」口號，透過活動凝聚更多支持台灣的力量。</p>
 
 
 
-<p>逾兩萬人當天一早聚集在溫哥華市中心參與全民體育盛事「溫哥華太陽長跑」（The Vancouver Sun Run），包括駐溫哥華辦事處人員與家人、中華航空公司加拿大分公司員工及大溫地區僑胞約 50 人組成的「台灣隊」，一邊以跑會友挑戰全程 10 公里路程，一邊向加拿大民眾宣揚台灣參與 WHA 的重要性。</p>
+<p>逾兩萬人當天一早聚集在溫哥華市中心參與全民體育盛事「溫哥華太陽長跑」（The Vancouver Sun Run），包括駐溫哥華辦事處人員與家人、中華航空公司加拿大分公司員工及大溫地區僑胞約 50 人組成的「台灣隊」，<strong>一邊以跑會友挑戰全程 10 公里路程，一邊向加拿大民眾宣揚台灣參與 WHA 的重要性。</strong></p>
 
 
 
@@ -116,7 +116,7 @@ author: 林志鴻
 
 
 
-<p>僑界聯合會另外兩位共同主席王美琴和謝明珠表示，他們正在社區發起「一人一信給國會議員、籲請支持台灣」的活動，獲得很好的迴響，有不少國會議員都稱已收到請願信，並樂見台灣參與國際組織。</p>
+<p>僑界聯合會另外兩位共同主席王美琴和謝明珠表示，他們正在社區發起「一人一信給國會議員、籲請支持台灣」的活動，獲得很好的迴響，<strong>有不少國會議員都稱已收到請願信，並樂見台灣參與國際組織。</strong></p>
 
 
 
@@ -148,7 +148,7 @@ author: 林志鴻
 
 
 
-<p>關島議會副議長巴恩斯（Tina Rose Muña Barnes）致詞表示，關島議會將於月底通過決議支持台灣參與 WHA，全力呼籲世界衛生組織（WHO）將台灣納入 WHA 各項會議、活動及機制。另外，關島觀光局副局長培瑞斯（Gerry Perez）指出，今年是駐關島辦事處與關島觀光局第 2 年合辦淨灘活動，期盼未來雙方持續合作，推動台灣與關島的觀光交流。</p>
+<p>關島議會副議長巴恩斯（Tina Rose Muña Barnes）致詞表示，<strong>關島議會將於月底通過決議支持台灣參與 WHA，全力呼籲世界衛生組織（WHO）將台灣納入 WHA 各項會議、活動及機制。</strong>另外，關島觀光局副局長培瑞斯（Gerry Perez）指出，今年是駐關島辦事處與關島觀光局第 2 年合辦淨灘活動，期盼未來雙方持續合作，推動台灣與關島的觀光交流。</p>
 
 
 
@@ -156,15 +156,15 @@ author: 林志鴻
 
 
 
-<h2><strong>▌</strong>日本外交藍皮書：支持台灣參與WHA</h2>
+<h2><strong>▌</strong>日本外交藍皮書：支持台灣參與 WHA</h2>
 
 
 
-<p>日本外務省從 1957 年起每年都會製作外交藍皮書，基於日本的外交立場，紀錄近期的國際情勢與外交動向。今年於 4 月 22 日公布 2022 年新版「外交藍皮書」，重申台灣是重要夥伴、支持台灣參與世界衛生大會（WHA），並睽違 19 年恢復稱俄羅斯「非法占領」具主權爭議的南千島群島。</p>
+<p>日本外務省從 1957 年起每年都會製作外交藍皮書，基於日本的外交立場，紀錄近期的國際情勢與外交動向。<strong>今年於 4 月 22 日公布 2022 年新版「外交藍皮書」，重申台灣是重要夥伴、支持台灣參與世界衛生大會（WHA）</strong>，並睽違 19 年恢復稱俄羅斯「非法占領」具主權爭議的南千島群島。</p>
 
 
 
-<p>日本放送協會（NHK）、讀賣新聞等媒體報導，今年新版藍皮書對台灣的記載延續去年的立場與文字，指台灣對日本「是極為重要的夥伴、重要的朋友」；重申日本主張防疫不該發生地理上空白，一貫支持台灣以觀察員身分參加WHA。</p>
+<p>日本放送協會（NHK）、讀賣新聞等媒體報導，今年新版藍皮書對台灣的記載延續去年的立場與文字，指台灣對日本「是極為重要的夥伴、重要的朋友」；重申日本主張防疫不該發生地理上空白，一貫支持台灣以觀察員身分參加 WHA。</p>
 
 
 
@@ -172,7 +172,7 @@ author: 林志鴻
 
 
 
-<p>參考資料：<br>2022/04/21　Taiwan in Canada　<a href="https://www.facebook.com/taiwanincanada/posts/1007480290138136" target="_blank" rel="noreferrer noopener">本處陳文儀大使在《國會山莊時報》The Hill Times投書獲刊</a><br>2022/04/22　自由時報　<a href="https://news.ltn.com.tw/news/world/paper/1513205?utm_medium=APP&amp;utm_campaign=SHARE&amp;fbclid=IwAR3Mb-qS1zkE7XUNkpbjuAlhK9Ppsmj5xtUQrRHpovdgflxyULPJCXY4wzo" target="_blank" rel="noreferrer noopener">日外交藍皮書重申台灣是重要夥伴 支持參與WHA</a><br>2022/04/23　中央社　<a href="https://www.cna.com.tw/news/aipl/202204230162.aspx?utm_source=cna.app&amp;utm_medium=app&amp;utm_campaign=inapp_share&amp;fbclid=IwAR3y3CZREVeT_3i-t3PjCrIdE0gGqx0jvlKPdZBKR1wADLXxwi1QuLAnZpE" target="_blank" rel="noreferrer noopener">世衛大會5月登場 關島議會將通過決議挺台參與</a><br>2022/04/27　外交部　<a href="https://www.mofa.gov.tw/News_Content.aspx?n=95&amp;s=97748&amp;fbclid=IwAR31E6s2_fcJj11Cc_Ffpn0bJq0uOv_plbEZ__8a7MC0jdZMwpTwlHlz0mM" target="_blank" rel="noreferrer noopener">外交部誠摯感謝斯洛伐克國會外交及衛生委員會分別通過決議支持我國參與WHA</a><br>2022/04/28　中央社　<a href="https://www.cna.com.tw/news/aopl/202204280011.aspx?utm_source=cna.app&amp;utm_medium=app&amp;utm_campaign=inapp_share&amp;fbclid=IwAR0r-KfQnXfkobvOSsM_SevbIKE8VwOrNNB5pruFhQQfQ0ZIDLwF7Y7xwR8" target="_blank" rel="noreferrer noopener">世衛大會將至 美眾院通過法案助台灣成為觀察員</a><br>2022/04/28　US Taiwan Watch: 美國台灣觀測站　<a href="https://www.facebook.com/ustaiwanwatch/photos/a.765293696987937/1982957975221497/" target="_blank" rel="noreferrer noopener">快訊：美國兩院通過法案 挺台參與WHA</a></p>
+<p>參考資料：<br>2022/04/28　U.S. House of Representatives　<a href="https://www.congress.gov/bill/117th-congress/senate-bill/812" target="_blank" rel="noreferrer noopener">S.812 &#8211; A bill to direct the Secretary of State to develop a strategy to regain observer status for Taiwan in the World Health Organization, and for other purposes.</a><br>2022/04/21　Taiwan in Canada　<a href="https://www.facebook.com/taiwanincanada/posts/1007480290138136" target="_blank" rel="noreferrer noopener">本處陳文儀大使在《國會山莊時報》The Hill Times投書獲刊</a><br>2022/04/22　自由時報　<a href="https://news.ltn.com.tw/news/world/paper/1513205?utm_medium=APP&amp;utm_campaign=SHARE&amp;fbclid=IwAR3Mb-qS1zkE7XUNkpbjuAlhK9Ppsmj5xtUQrRHpovdgflxyULPJCXY4wzo" target="_blank" rel="noreferrer noopener">日外交藍皮書重申台灣是重要夥伴 支持參與WHA</a><br>2022/04/23　中央社　<a href="https://www.cna.com.tw/news/aipl/202204230162.aspx?utm_source=cna.app&amp;utm_medium=app&amp;utm_campaign=inapp_share&amp;fbclid=IwAR3y3CZREVeT_3i-t3PjCrIdE0gGqx0jvlKPdZBKR1wADLXxwi1QuLAnZpE" target="_blank" rel="noreferrer noopener">世衛大會5月登場 關島議會將通過決議挺台參與</a><br>2022/04/27　外交部　<a href="https://www.mofa.gov.tw/News_Content.aspx?n=95&amp;s=97748&amp;fbclid=IwAR31E6s2_fcJj11Cc_Ffpn0bJq0uOv_plbEZ__8a7MC0jdZMwpTwlHlz0mM" target="_blank" rel="noreferrer noopener">外交部誠摯感謝斯洛伐克國會外交及衛生委員會分別通過決議支持我國參與WHA</a><br>2022/04/28　US Taiwan Watch: 美國台灣觀測站　<a href="https://www.facebook.com/ustaiwanwatch/photos/a.765293696987937/1982957975221497/" target="_blank" rel="noreferrer noopener">快訊：美國兩院通過法案 挺台參與WHA</a></p>
 
 
 
